Fix a small alignment issue.

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -27,4 +27,8 @@
 		margin-top: -5px;
 		margin-right: 7px;
 	}
+
+	&+span {
+		margin-top: -18px;
+	}
 }
